Fix spacing issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 .header {
     background: rgba(27,31,35,.7);
-    position: fixed;
     width: 100%;
     height: 25%;
     color: white;
@@ -25,7 +24,8 @@ h1 {
     text-align: center;
     font-family: Courier, monospace;
     font-weight: lighter;
-    font-size: 7.0vh;
+    font-size: 6.0vh;
     overflow: hidden;
     white-space: nowrap;
+    margin: 0 0 6vh;
 }
